syntax = "proto3";
package spacemesh.v1;
option go_package = "github.com/spacemeshos/api/release/go/spacemesh/v1";

import "global_state_types.proto";
import "types.proto";

message AccountsRequest {
    uint32 layer = 1;
}

message AccountsResponse {
    repeated Account account_wrapper = 1;
}

message NetworkInfoResponse {
    string id = 1;
}

message EpochData {
    bytes beacon = 1;
}

message Eligibility {
    uint32 j = 1;
    bytes signature = 2; 
}

message ActiveSetRequest {
    uint32 epoch = 1;
}

message ActiveSetResponse {
    repeated ActivationId ids = 1;
}

message Proposal {
    bytes id = 1;
    EpochNumber epoch = 2;
    LayerNumber layer = 3; 
    SmesherId smesher = 4; 
    oneof epoch_data {
        bytes reference = 5;
        EpochData data = 6;
    }
    bytes ballot = 7;
    repeated Eligibility eligibilities = 8;
    enum Status {
        Created = 0;
        Included = 1;
    }
    Status status = 9;
}